apple-landing/styles.css
/* CSS header*/ 

header{
   background: rgba(0, 0, 0, 0.8); backdrop-filter: saturate(1.8) blur(20px);
   box-sizing: border-box;
    padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
body{
    margin: 0;
}

.sticky{
    position: fixed;
    top: 0;
    width: 100%;
}

header li{
    display: inline-block;
   
}

#home{
   position: relative;
   top: 5px;
}

#search{
    position: relative;
    top: 9px;
 }

ul{
    margin: 0px;
    padding: 0px;
}

ul.header-list{
    margin: 0 10px;
    display: flex; 
    justify-content: center; 
}

a.header-link{
    font-size: 14px;
    line-height: 3.14286;
    font-weight: 400;
    letter-spacing: -.01em;
    font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
    color: #f5f5f7;
    position: relative;
    z-index: 1;
    display: inline-block;
    padding: 0 10px;
    height: 44px;
    opacity: .8;
    background: no-repeat;
    text-decoration: none;
    white-space: nowrap;
    -webkit-transition: opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
    transition: opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
    -webkit-tap-highlight-color: transparent;
    outline-offset: -7px;
}

a.header-link:hover{
    font-size: 14px;
    line-height: 3.14286;
    font-weight: 400;
    letter-spacing: -.01em;
    font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
    color: #f5f5f7;
    position: relative;
    z-index: 1;
    display: inline-block;
    padding: 0 10px;
    height: 44px;
    opacity: 1;
    background: no-repeat;
    text-decoration: none;
    white-space: nowrap;
    outline-offset: -7px;
}


/* CSS footer*/ 

footer{
    background: #f5f5f7;
}

a.footer-link{
    color: #515154;
	font-style: normal;
	cursor: pointer;
	font-size: 12px;
    font-weight: 400;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	text-decoration-line: none;
    text-decoration-style: solid;
}

a.footer-link:hover{
    color: #1d1d1f;
    font-style: normal;
	cursor: pointer;
	font-size: 12px;
	font-weight: 400;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	text-decoration-line: underline;
    text-decoration-style: solid;
    letter-spacing: normal;
}

a.footer-hotspot{
    color: #0066cc;
	font-style: normal;
	cursor: pointer;
	font-size: 12px;
	font-weight: 400;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	text-decoration-line: none;
    text-decoration-style: solid;
}

li.caption{
    color: #86868b;
	font-style: normal;
	cursor: pointer;
	font-size: 12px;
	font-weight: 400;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	text-decoration-line: none;
    text-decoration-style: solid;  
    max-width: 980px;
    padding: 0 10px;
}

.second{
    margin-top: 16px;
}

ul.directory{
    display: flex;
    justify-content: center;
}
.column{
    margin: 20px;
    width: 245px;
    display: flex;
    justify-content: center;
}

li{
    list-style: none;
    line-height: 20px;
    margin: 0 50px 0 0;
}

footer li{
    line-height: 25px;
}

div.conditions{
    border-bottom: 1px solid #d2d2d7;
    color: #86868b;
    padding: 17px 0 11px;
    max-width: 980px;
    display: table;
    margin: 0 auto;
}

div.vendor{
    border-bottom: 1px solid #d2d2d7;
    max-width: 980px;
    display: flex;
}

div.copyright{
    display: flex;
    position: relative;
    top: -3px;
    z-index: 1;
    margin: 5px 30px 0 0 ;
}

ul.bottom-links{
    margin: 0 20px;
    display: flex;
}

.legal{
    border-right: 1px solid #d2d2d7;
    margin-right: 7px;
    padding-right: 10px;
    display: inline-block;
    margin-top: 7px;
    white-space: nowrap;
} 

div.bottom-info{
    border-top: none;
    display: table;
    align-self: center;
    padding-top: 34px;
	padding: 17px 0 21px;
	display: flex;
	align-items: center;
}

.copyright p{
    margin: 12px auto;
}

#country{
    margin: 6px auto;
    align-content: flex-end;
}

#flag{
    position: relative;
    top: 4px;
    height: 16px;
    padding-right: 8px;
 }

.vendor p{
    height: 25px;
    box-sizing: content-box;
    margin: 0 0 7px;
    padding: 0 0 8px;
}

footer h6{
    margin: 0px;
}


h3{
    color: #0066cc;
    font-size: 21px;
    line-height: 1.381;
    font-weight: 400;
    letter-spacing: .011em;
    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
}

h6{
    color: #1d1d1f;
	font-style: normal;
	cursor: pointer;
	font-size: 12px;
	font-weight: 600;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	text-decoration-line: none;
    text-decoration-style: solid; 
}

p{
    color: #86868b;
	font-style: normal;
	cursor: pointer;
	font-size: 12px;
	font-weight: 400;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	text-decoration-line: none;
    text-decoration-style: solid;  

}

/* CSS main*/ 

.main{
	display: flex;
	flex-direction: column;
    /*border: 3px solid blue;*/
    padding: 44px 0 0 0 ;
}

.main-wraper{
	display: flex;
	/*border: 3px solid green;*/
	flex-direction: column;
}

.mini-main{
	display: flex;
    /*border: 3px solid yellow;*/
    flex-wrap: wrap;
}

.mini-section{
    width: 100%;
    display: flex;
    justify-content: center;
}

.main-image-wraper{
	width: 100%;
	height: 692px;
	/*border: 3px solid red;*/
	background-color: rgb(19, 19, 19);
	display: flex;
	justify-content: center;
    flex-wrap: wrap;
    margin-bottom: 16px;
}

.second-image-wraper{
	width: 100%;
	height: 692px;
	/*border: 3px solid red;*/
	background-color: #f9f9f9;
	display: flex;
	justify-content: center;
    flex-wrap: wrap;
    margin-bottom: 16px;
}

.mini-image-wraper{
	width: 50%;
	height: 624px;
	/*border: 3px solid red;*/
	background-color: #f9f9f9;
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
    margin: 8px;
}

.mini-image-wraper-dark{
	width: 50%;
	height: 624px;
	/*border: 3px solid red;*/
	background-color: black;
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
    margin: 12px 8px 8px 8px;
}

@media screen and (max-width: 1170px){
	.mini-main{
		flex-wrap: wrap;
    }
	.mini-image-wraper{
		width: 100%;
    }
}


.image-title{
	height: 100px;
	width: 100%;
	/*border: 3px solid red;*/
	text-align: center;
}


.main-image{
	color: white;
	width: 1156px;
	height: 584px;
	/*border: 3px solid red;*/
	background-image: url("image/iphone-se.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: center center;
	background-repeat: no-repeat;
}

.second-image{
	color: white;
	width: 100%;
	height: 584px;
	/*border: 3px solid red;*/
	background-image: url("image/image2.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: center center;
	background-repeat: no-repeat;
}

.third-image{
	color: white;
	width: 100%;
	height: 584px;
	/*border: 3px solid red;*/
	background-image: url("image/image3.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: center center;
	background-repeat: no-repeat;
}

.mini-image1{
	color: white;
	width: 100%;
	height: 584px;
	/*border: 3px solid red;*/
	background-image: url("image/image4.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: center center;
	background-repeat: no-repeat;
}

.mini-image2{
	color: white;
	width: 356px;
	height: 324px;
	/*border: 3px solid red;*/
	background-image: url("image/image5.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: center center;
	background-repeat: no-repeat;
}

.mini-image3{
	color: white;
	width: 100%;
	height: 620px;
	/*border: 3px solid red;*/
	background-image: url("image/image6.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: center center;
	background-repeat: no-repeat;
}

.mini-image4{
	color: white;
	width: 356px;
	height: 400px;
	/*border: 3px solid red;*/
	background-image: url("image/image7.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: top center;
	background-repeat: no-repeat;
}
.mini-image5{
	color: white;
	width: 100%;
    height: 624px;
	/*border: 3px solid red;*/
	background-image: url("image/image8.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: center;
	background-position: center center;
	background-repeat: no-repeat;
}

.mini-image6{
	color: white;
	width: 100%;
	height: 400px;
	/*border: 3px solid red;*/
	background-image: url("image/image9.jpg");
	background-size: cover;
	align-self: flex-end;
	display: flex;
	justify-content: baseline;
	background-position: bottom center;
	background-repeat: no-repeat;
}

.image-copy{
	height: 100px;
	/*border: 3px solid red;*/
	text-align: center;
}

.h2-white{
	color: white;
	font-size: 56px;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	font-weight: 600;
	letter-spacing: 0.112px;
	text-size-adjust: 100%;
	line-height: 31px;
    font-style: normal;
    padding-top: 24px;
}

.h3-white{
	color: white;
	font-size: 20px;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	font-weight: 350;
	letter-spacing: 0.112px;
	text-size-adjust: 100%;
	line-height: 31px;
	font-style: normal;
}

.h2-black{
	color: black;
	font-size: 56px;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	font-weight: 600;
	letter-spacing: 0.112px;
	text-size-adjust: 100%;
	line-height: 31px;
    font-style: normal;
    padding-top: 24px;
}

.h3-black{
	color: black;
	font-size: 20px;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	font-weight: 350;
	letter-spacing: 0.112px;
	text-size-adjust: 100%;
	line-height: 12px;
	font-style: normal;
}

.link-main-image{
	color: rgb(41, 151, 255);
	font-size: 20px;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	font-weight: 350;
	letter-spacing: 0.231px;
	text-size-adjust: 100%;
	line-height: 28px;
	font-style: normal;
	text-decoration-line: none;
}

.link-main-image:hover{
	color: rgb(41, 151, 255);
	font-size: 20px;
	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
	font-weight: 350;
	letter-spacing: 0.231px;
	text-size-adjust: 100%;
	line-height: 28px;
	font-style: normal;
	text-decoration-line: underline;
}

